--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,19 +1,17 @@
 doctype html
-html lang="en"
+html.no-js lang="en" 
   head
-    meta charset="utf-8"
-    meta name="viewport" content="width=device-width, initial-scale=1.0"
-
+    meta charset="utf-8" /
+    meta content="width=device-width, initial-scale=1.0" name="viewport" /
     title == content_for?(:title) ? yield(:title) : "Untitled"
-
+    / Original template has link to Foundation 3 Incons
+    / If you are intended to use them, they should be included in Rails-assets
+    link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet" type="text/css" /
     = stylesheet_link_tag "application"
-    = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application", 'data-turbolinks-track' => true
     = csrf_meta_tag
-    <script>$(document).foundation();</script>
 
   body
-
     == yield
 
 //doctype html
