--- a/app/views/codersclan/index.html.slim
+++ b/app/views/codersclan/index.html.slim
@@ -17,9 +17,10 @@
       li.hide-for-small-only
         a href="#"  My Account
       li
-        a.button Login
+        a.button.weird Login
 
 br/
+
 .row
   .medium-7.large-6.columns
     h1 Close Your Eyes and Open Your Mind
